host/js-bindgen/tests/ui/import.stderr
error: expected `<attribute> = "..."`
 --> tests/ui/import.rs:1:1
  |
1 | js_bindgen::import_js!();
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `<attribute> = "..."`
 --> tests/ui/import.rs:4:24
  |
4 | js_bindgen::import_js!(42);
  |                        ^^

error: expected `<attribute> = "..."`
 --> tests/ui/import.rs:7:24
  |
7 | js_bindgen::import_js!(foo);
  |                        ^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:10:24
   |
10 | js_bindgen::import_js!(module);
   |                        ^^^^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:13:24
   |
13 | js_bindgen::import_js!(module+);
   |                        ^^^^^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:16:24
   |
16 | js_bindgen::import_js!(module =);
   |                        ^^^^^^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:19:24
   |
19 | js_bindgen::import_js!(module = 42);
   |                        ^^^^^^^^^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:22:24
   |
22 | js_bindgen::import_js!(module = Foo);
   |                        ^^^^^^^^^^^^

error: expected `module`
  --> tests/ui/import.rs:25:24
   |
25 | js_bindgen::import_js!(foo = "bar");
   |                        ^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:28:1
   |
28 | js_bindgen::import_js!(module = "foo");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:31:1
   |
31 | js_bindgen::import_js!(module = "foo",);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:34:40
   |
34 | js_bindgen::import_js!(module = "foo", 42);
   |                                        ^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:37:40
   |
37 | js_bindgen::import_js!(module = "foo", "bar");
   |                                        ^^^^^

error: expected `<attribute> = "..."`
  --> tests/ui/import.rs:40:40
   |
40 | js_bindgen::import_js!(module = "foo", bar = Baz);
   |                                        ^^^^^^^^^

error: expected `name`
  --> tests/ui/import.rs:43:40
   |
43 | js_bindgen::import_js!(module = "foo", bar = "baz");
   |                                        ^^^

error: requires at least a string argument
  --> tests/ui/import.rs:46:1
   |
46 | js_bindgen::import_js!(module = "foo", name = "bar");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string argument
  --> tests/ui/import.rs:49:1
   |
49 | js_bindgen::import_js!(module = "foo", name = "bar",);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `js_bindgen::import_js` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string argument
  --> tests/ui/import.rs:52:54
   |
52 | js_bindgen::import_js!(module = "foo", name = "bar", 42);
   |                                                      ^^

error: expected array of strings
  --> tests/ui/import.rs:55:54
   |
55 | js_bindgen::import_js!(module = "foo", name = "bar", baz = Qux);
   |                                                      ^^^^^^^^^

error: expected array of strings
  --> tests/ui/import.rs:58:54
   |
58 | js_bindgen::import_js!(module = "foo", name = "bar", baz = "qux");
   |                                                      ^^^^^^^^^^^

error: aborting due to 20 previous errors

